Added author route and GET operations
